[workspace]
resolver = "2"

members = ["ast", "host", "runtime", "transform", "util"]

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
absolute_paths = "warn"
field_reassign_with_default = "allow"
missing_safety_doc = "allow"
new_ret_no_self = "allow"

[package]
name = "hvm64"
version = "0.3.0"
edition = "2021"
description = "HVM-Core is a massively parallel Interaction Combinator evaluator."
license = "MIT"

[[bin]]
name = "hvm64"
path = "src/main.rs"
bench = false
required-features = ["std"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
debug = "full"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libloading = { version = "0.8.3", default-features = false }
ordered-float = { version = "4.2.0" }
thiserror = "1.0.58"

hvm64-ast = { path = "./ast" }
hvm64-runtime = { path = "./runtime" }
hvm64-transform = { path = "./transform" }
hvm64-util = { path = "./util" }
hvm64-host = { path = "./host" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["glob"] }
serial_test = "3.0.0"

[features]
default = ["std"]
std = []
trace = ["hvm64-runtime/trace"]
