[package]
name = "hvm64"
version.workspace = true
edition = "2021"
description = "HVM-Core is a massively parallel Interaction Combinator evaluator."
license = "MIT"

[workspace.package]
version = "0.3.0"

[[bin]]
name = "hvm64"
path = "src/main.rs"
bench = false
required-features = ["std"]

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"
debug = "full"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
libloading = { version = "0.8.3", default-features = false }

hvm64-ast = { path = "./ast" }
hvm64-runtime = { path = "./runtime" }
hvm64-transform = { path = "./transform" }
hvm64-util = { path = "./util" }
hvm64-host = { path = "./host" }

dyntest = "0.1.2"
TSPL = { git = "https://github.com/tjjfvi/TSPL", branch = "no_std" }

[dev-dependencies]
insta = { version = "1.34.0", features = ["glob"] }

[features]
default = ["std"]
std = []
trace = ["hvm64-runtime/trace"]

[patch.crates-io]
highlight_error = { git = "https://github.com/tjjfvi/rust_highlight_error/", branch = "no_std" }

[[test]]
name = "tests"
harness = false

[lints]
workspace = true

[workspace]
resolver = "2"

[workspace.lints.clippy]
alloc_instead_of_core = "warn"
std_instead_of_core = "warn"
std_instead_of_alloc = "warn"
absolute_paths = "warn"
field_reassign_with_default = "allow"
missing_safety_doc = "allow"
new_ret_no_self = "allow"
