[package]
name = "hvm64-ast"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/ast.rs"

[dependencies]
ordered-float = { version = "4.2.0", default-features = false }
TSPL = { version = "0.0.12", optional = true }

hvm64-util = { path = "../util" }

[features]
default = ["std", "parser"]
std = []
parser = ["dep:TSPL"]

[lints]
workspace = true
