[package]
name = "hvm64-ast"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/ast.rs"

[dependencies]
ordered-float = { version = "4.2.0", default-features = false }
TSPL = { git = "https://github.com/tjjfvi/TSPL", branch = "no_std", optional = true }

hvm64-util = { path = "../util", default-features = false }

[features]
default = ["std", "parser"]
std = ["hvm64-util/std"]
parser = ["dep:TSPL"]

[lints]
workspace = true
