[package]
name = "hvm64-ast"
version.workspace = true
edition = "2021"

[lib]
path = "src/ast.rs"

[dependencies]
TSPL = { git = "https://github.com/tjjfvi/TSPL", branch = "no_std", optional = true }

hvm64-util = { path = "../util", default-features = false }
hvm64-num = { path = "../num", default-features = false }

[features]
default = ["std", "parser"]
std = ["hvm64-util/std", "hvm64-num/std"]
parser = ["dep:TSPL"]

[lints]
workspace = true
