[package]
name = "hvm64-host"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/host.rs"

[dependencies]
hvm64-ast = { path = "../ast", default-features = false }
hvm64-util = { path = "../util", default-features = false }
hvm64-runtime = { path = "../runtime", default-features = false }

[features]
std = ["hvm64-ast/std", "hvm64-util/std", "hvm64-runtime/std"]

[lints]
workspace = true
