[package]
name = "hvm64-host"
version.workspace = true
edition = "2021"

[lib]
path = "src/host.rs"

[dependencies]
hvm64-util = { path = "../util", default-features = false }
hvm64-ast = { path = "../ast", default-features = false }
hvm64-runtime = { path = "../runtime", default-features = false }
hvm64-num = { path = "../num", default-features = false }

[features]
default = ["std"]
std = ["hvm64-util/std", "hvm64-ast/std", "hvm64-runtime/std", "hvm64-num/std"]

[lints]
workspace = true
