[package]
name = "hvm64-runtime"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/runtime.rs"

[dependencies]
parking_lot = "0.12.2"
nohash-hasher = { version = "0.2.0", optional = true }

hvm64-util = { path = "../util", default-features = false }

[features]
std = ["hvm64-util/std", "dep:nohash-hasher"]
trace = []

[lints]
workspace = true
