[package]
name = "hvm-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "hvm_core"
path = "src/lib.rs"

[dependencies]
nohash = "0.2.0"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "hvm_cpu"
harness = false