[package]
name = "hvmc-transform"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/transform.rs"

[dependencies]
ordered-float = { version = "4.2.0", default-features = false }
parking_lot = "0.12.2"
thiserror = "1.0.58"

hvmc-ast = { path = "../ast", default-features = false }
hvmc-runtime = { path = "../runtime", default-features = false }
hvmc-util = { path = "../util", default-features = false }
hvmc-host = { path = "../host", default-features = false }

[features]
default = ["std"]
std = ["hvmc-ast/std", "hvmc-runtime/std", "hvmc-util/std", "hvmc-host/std"]

[lints]
workspace = true
