[package]
name = "hvm64-transform"
version = "0.3.0"
edition = "2021"

[lib]
path = "src/transform.rs"

[dependencies]
ordered-float = { version = "4.2.0", default-features = false }
parking_lot = "0.12.2"
thiserror = "1.0.58"

hvm64-ast = { path = "../ast", default-features = false }
hvm64-runtime = { path = "../runtime", default-features = false }
hvm64-util = { path = "../util", default-features = false }
hvm64-host = { path = "../host", default-features = false }

[features]
default = ["std"]
std = ["hvm64-ast/std", "hvm64-runtime/std", "hvm64-util/std", "hvm64-host/std"]

[lints]
workspace = true
